--- a/src/scss/_magnific-popup.scss
+++ b/src/scss/_magnific-popup.scss
@@ -1,5 +1,10 @@
 /* Magnific Popup CSS */
-
+.mt-5{
+    margin-top: 2rem;
+}
+.ml-2{
+    margin-left: 2rem;
+}
 .mfp-bg {
     top: 0;
     left: 0;
